# FlagGems

./: CMakeLists.txt  README.md  README_cn.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-sync.yaml  code_scan.yaml  coverage.yaml  daily.yaml  gems-cpp-extension.yaml  gems-experimental-test.yaml  gems-test-on-hopper.yaml  gems-test-on-metax.yaml  hugo-site.yaml  image-builder.yaml  linter.yml  mkdocs.yaml  python-coverage.yaml  release.yaml
benchmark/: conftest.py  core_shapes.yaml  performance_utils.py  test_attention_perf.py  test_binary_pointwise_perf.py  test_blas_perf.py  test_convolution_perf.py  test_norm_perf.py  test_reduction_perf.py  test_select_and_slice_perf.py  test_special_perf.py  test_tensor_constructor_perf.py  test_transformer_engine_perf.py  test_unary_pointwise_perf.py
cmake/: BackendMUSA.cmake
conf/: operators.yaml
ctests/: CMakeLists.txt  test_triton_addmm.cpp  test_triton_copy.cpp  test_triton_div.cpp  test_triton_embedding.cpp  test_triton_mm.cpp
docs/: .gitignore  get_start_with_flaggems.md  hugo.yaml
docs/assets/: _custom.scss
docs/assets/sass/: main.scss
docs/content/en/: _index.md
docs/content/en/contribution/: _index.md  backend.md  cpp-wrapper.md  overview.md
docs/content/en/overview/: _index.md  features.md  platforms.md  pointwise-dynamic.md
docs/content/en/performance/: _index.md  benchmark.md  database.md  overview.md
docs/content/en/references/: _index.md  changelog.md  experimental.md  operators.md  project_structure.md  release.md
docs/content/en/references/test/: _index.md
docs/content/en/references/test/coverage/: _index.md
docs/content/en/references/test/unit/: _index.md
docs/content/en/testing/: _index.md  coverage.md  unittest.md
docs/content/en/usage/: _index.md  cpp.md  debugging.md  distributed.md  experimental.md  frameworks.md  modules.md  non-nvidia.md  overview.md  selective.md  tuning.md
docs/content/zh-cn/: _index.md
docs/content/zh-cn/contribution/: _index.md  backend.md  cpp-wrapper.md  overview.md
docs/content/zh-cn/overview/: _index.md  features.md  platforms.md  pointwise-dynamic.md
docs/content/zh-cn/performance/: _index.md  benchmark.md  database.md  overview.md
docs/content/zh-cn/references/: _index.md  changelog.md  experimental.md  operators.md  project_structure.md  release.md
docs/content/zh-cn/testing/: _index.md  coverage.md  unittest.md
docs/content/zh-cn/usage/: _index.md  cpp.md  debugging.md  distributed.md  experimental.md  frameworks.md  modules.md  non-nvidia.md  overview.md  selective.md  tuning.md
docs/layouts/: README.md
docs/layouts/shortcodes/: coverage-data.html  operator-list.html
docs/static/: README.md
docs/themes/hugo-book/: README.md  hugo.toml
docs/themes/hugo-book/assets/: _main.scss  _markdown.scss  _shortcodes.scss  katex.json  search.js  sw-register.js
docs/themes/hugo-book/exampleSite/content.en/posts/: creating-a-new-theme.md
docs/themes/hugo-book/i18n/: he.yaml
docs/themes/hugo-book/layouts/_markup/: render-blockquote.html  render-codeblock-katex.html  render-codeblock-mermaid.html  render-image.html  render-link.html
docs/themes/hugo-book/layouts/_partials/docs/: copyright.html  html-attrs.html  html-head-favicon.html  menu-filetree.html  menu-hugo.html  post-prev-next.html  search.html  title.html
docs/themes/hugo-book/layouts/_shortcodes/: i18n.html  image.html  mermaid.html
docs/themes/hugo-book/layouts/posts/: list.html
docs/themes/hugo-book/static/asciinema/: asciinema-auto.js
flag_tree_requirements/: requirements_ascend.txt  requirements_enflame-gcu300.txt  requirements_enflame-gcu400.txt  requirements_hcu.txt  requirements_iluvatar.txt  requirements_mthreads.txt  requirements_nvidia.txt  requirements_tsingmicro.txt
include/flag_gems/: accuracy_utils.h  backend_utils.h  operators.h
lib/: CMakeLists.txt  accuracy_utils.cpp  argmax.cpp  copy.cpp  div.cpp  exponential_.cpp  flash_attn_varlen_func.cpp  sort.cpp
src/flag_gems/: __init__.py
src/flag_gems/csrc/: aten_patch.cpp  cstub.cpp
src/flag_gems/experimental_ops/: README.md  __init__.py  rmsnorm.py
src/flag_gems/experimental_ops/exp_tests/: rmsnorm_test.py
src/flag_gems/fused/: __init__.py  fused_moe.py  moe_align_block_size.py  moe_sum.py
src/flag_gems/fused/DSA/: bin_topk.py
src/flag_gems/ops/: __init__.py  add.py  attention.py  baddbmm.py  conj_physical.py  conv1d.py  conv2d.py  conv3d.py  div.py  dynamic_scaled_fp8_quant.py  fill.py  group_gemm.py  index.py  index_put.py  kron.py  masked_scatter.py  mm.py  per_token_group_quant_fp8.py  per_token_group_quant_int8.py  per_token_quant_int8.py  pow.py  prelu.py  randn.py  scatter_add_.py  select_backward.py  sub.py  upsample_linear1d.py  vdot.py  w8a8_block_fp8_matmul.py
src/flag_gems/patches/: patch_vllm_all.py
src/flag_gems/runtime/backend/_amd/: __init__.py
src/flag_gems/runtime/backend/_arm/: __init__.py
src/flag_gems/runtime/backend/_ascend/fused/: rotary_embedding.py
src/flag_gems/runtime/backend/_ascend/ops/: __init__.py  groupnorm.py  hstack.py
src/flag_gems/runtime/backend/_cambricon/: __init__.py
src/flag_gems/runtime/backend/_cambricon/ops/: __init__.py  (+4 more)
src/flag_gems/runtime/backend/_hygon/: __init__.py  tune_configs.yaml
src/flag_gems/runtime/backend/_kunlunxin/: __init__.py
src/flag_gems/runtime/backend/_metax/: __init__.py
src/flag_gems/runtime/backend/_mthreads/: __init__.py
src/flag_gems/runtime/backend/_nvidia/: __init__.py  tune_configs.yaml
src/flag_gems/runtime/backend/_sunrise/: __init__.py
src/flag_gems/utils/: __init__.py  libentry.py  pointwise_dynamic.py
src/flag_gems/utils/configs/: fa8_w8a8-128-128.yaml  fused_moe_config.yaml
tests/: test_attention_ops.py  test_binary_pointwise_ops.py  test_blas_ops.py  test_conv3d.py  test_convolution_ops.py  test_distribution_ops.py  test_norm_ops.py  test_reduction_ops.py  test_special_ops.py  test_tensor_constructor_ops.py  test_unary_pointwise_ops.py  test_vllm_ops.py
tests/test_DSA/: test_bin_topk.py
tools/code_coverage/: pull_request.py
triton_src/: copy.py
(+63 files in other folders)
